--- a/psychro-diagram/package.json
+++ b/psychro-diagram/package.json
@@ -1,7 +1,7 @@
 {
     "type": "dev-empty-widget",
     "version": "1.1.0",
-    "author": "Your name here",
+    "author": "Vincent Scaviner",
     "url": "https://linkToUrlHere.com",
     "credits": "external libraries used here",
     "dimensions": {
