--- a/psychro-diagram/package.json
+++ b/psychro-diagram/package.json
@@ -1,5 +1,5 @@
 {
-    "type": "dev-empty-widget",
+    "type": "psycro-diagram",
     "version": "1.1.0",
     "author": "Vincent Scaviner",
     "url": "https://linkToUrlHere.com",
